<resources>

    <string name="app_name">BakersCorner</string>
    <string name="recipe_image_content_description">An image of the food item to be made in the recipe.</string>
    <string name="ingredient_image_content_description">An image of the eggs, flour, and sugar</string>
    <string name="steps_image_content_description">An image of a notepad with a checkmark and a pencil</string>
    <string name="up_button_content_description">Navigate up</string>
    <string name="recipe_title_tool_text">Nutella</string>
    <string name="recipe_ingredients_button_text">Ingredients</string>
    <string name="recipe_steps_button_text">Let\'s Make it!</string>
    <string name="recipe_servings_text">Servings:</string>
    <string name="no_connection_text">Let\'s check our internet connection, tap the logo, and then get to baking!</string>

    <string name="ingredients_title">Ingredients</string>
    <string name="steps_title">Steps</string>
    <string name="play_video">Play Video</string>

    <string name="steps_thumbnail_content_description">An image </string>

    <string name="appwidget_text">Bakers Corner</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_recipe_detail">RecipeDetailActivity</string>
    <string name="title_activity_steps_player">StepsPlayerActivity</string>

</resources>
