<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e5e5e5"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/step_detail_list_item_image_view"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/steps_image_content_description"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:src="@drawable/steps"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/step_text_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/step_detail_list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/ingredient_image_content_description" />

        <Button
            android:id="@+id/step_detail_list_item_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/transparent"
            android:text="@string/play_video"
            android:textColor="@color/play_video_text_color"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>