<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_item_container"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="16dp"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/recipe_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:contentDescription="@string/recipe_image_content_description"
        android:src="@drawable/bakers_corner_logo" />


    <TextView
        android:id="@+id/recipe_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="8dp"
        android:text="Goblets"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:background="@drawable/ingredients" />

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp"
        android:background="@drawable/steps" />

    <TextView
        android:id="@+id/ingredients_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="32dp"
        android:background="@color/transparent"
        android:text="@string/recipe_ingredients_button_text" />

    <TextView
        android:id="@+id/steps_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="75dp"
        android:text="@string/recipe_servings_text" />

    <TextView
        android:id="@+id/servings_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_servings_text" />


</FrameLayout>